End the noflo-graph tag

--- a/json.html
+++ b/json.html
@@ -9,7 +9,7 @@
     <link rel="import" href="noflo-graph.html">
   </head>
   <body>
-    <noflo-graph src="touch-demo.json" root="/bergie-noflo-dom" image-selector="#movable" anchorx-in="250" anchory-in="150">
+    <noflo-graph src="touch-demo.json" root="/bergie-noflo-dom" image-selector="#movable" anchorx-in="250" anchory-in="150"></noflo-graph>
     <img id="movable" src="http://bergie.iki.fi/style/img/mdpi/bergie.jpg">
   </body>
 </html>
